src/test/ui/feature-gates/feature-gate-slice-patterns.stderr
error[E0658]: syntax for subslices in slice patterns is not yet stabilized
  --> $DIR/feature-gate-slice-patterns.rs:6:16
   |
LL |         [1, 2, ..] => {}
   |                ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error[E0658]: syntax for subslices in slice patterns is not yet stabilized
  --> $DIR/feature-gate-slice-patterns.rs:7:13
   |
LL |         [1, .., 5] => {}
   |             ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error[E0658]: syntax for subslices in slice patterns is not yet stabilized
  --> $DIR/feature-gate-slice-patterns.rs:8:10
   |
LL |         [.., 4, 5] => {}
   |          ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error[E0658]: syntax for subslices in slice patterns is not yet stabilized
  --> $DIR/feature-gate-slice-patterns.rs:13:11
   |
LL |         [ xs.., 4, 5 ] => {}
   |           ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error[E0658]: syntax for subslices in slice patterns is not yet stabilized
  --> $DIR/feature-gate-slice-patterns.rs:14:14
   |
LL |         [ 1, xs.., 5 ] => {}
   |              ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error[E0658]: syntax for subslices in slice patterns is not yet stabilized
  --> $DIR/feature-gate-slice-patterns.rs:15:17
   |
LL |         [ 1, 2, xs.. ] => {}
   |                 ^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/62254
   = help: add #![feature(slice_patterns)] to the crate attributes to enable

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
